--- a/Aubio.NET.TestLog/Aubio.NET.TestLog.csproj
+++ b/Aubio.NET.TestLog/Aubio.NET.TestLog.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3F991F73-DA79-4260-9449-178D3E840F64}</ProjectGuid>
+    <ProjectGuid>{48CD859B-D9FE-4466-BD39-2B10C479977B}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Aubio.NET.TestIO</RootNamespace>
-    <AssemblyName>Aubio.NET.TestIO</AssemblyName>
+    <RootNamespace>Aubio.NET.TestLog</RootNamespace>
+    <AssemblyName>Aubio.NET.TestLog</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -56,7 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Aubio.NET\Aubio.NET.csproj">
-      <Project>{B9FE30C4-A8E2-4DF9-84AE-4CF438956E5A}</Project>
+      <Project>{b9fe30c4-a8e2-4df9-84ae-4cf438956e5a}</Project>
       <Name>Aubio.NET</Name>
     </ProjectReference>
   </ItemGroup>
