--- a/Aubio.NET.TestParameter/Aubio.NET.TestParameter.csproj
+++ b/Aubio.NET.TestParameter/Aubio.NET.TestParameter.csproj
@@ -21,7 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,7 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -45,16 +45,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\..\aubio\x64\bin\aubio.dll">
-      <Link>aubio.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\..\aubio\x64\bin\aubio.pdb">
-      <Link>aubio.pdb</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\Aubio.NET.Test.Helper\Aubio.NET.Test.Helper.csproj">
+      <Project>{c904d8cb-12cd-4fec-b7de-9c0ea25817ac}</Project>
+      <Name>Aubio.NET.Test.Helper</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Aubio.NET\Aubio.NET.csproj">
       <Project>{b9fe30c4-a8e2-4df9-84ae-4cf438956e5a}</Project>
       <Name>Aubio.NET</Name>
