--- a/Aubio.NET.Test.Helper/Aubio.NET.Test.Helper.csproj
+++ b/Aubio.NET.Test.Helper/Aubio.NET.Test.Helper.csproj
@@ -39,63 +39,71 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\x86-windows\bin\aubio.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\aubio.dll">
       <Link>aubio.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\avcodec-57.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\avcodec-57.dll">
       <Link>avcodec-57.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\avdevice-57.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\avdevice-57.dll">
       <Link>avdevice-57.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\avfilter-6.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\avfilter-6.dll">
       <Link>avfilter-6.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\avformat-57.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\avformat-57.dll">
       <Link>avformat-57.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\avutil-55.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\avutil-55.dll">
       <Link>avutil-55.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\flac++.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\flac++.dll">
       <Link>flac++.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\flac.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\flac.dll">
       <Link>flac.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\libsndfile-1.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\libbz2.dll">
+      <Link>libbz2.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\.dependencies\windows\x86\desktop\libsndfile-1.dll">
       <Link>libsndfile-1.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\ogg.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\lzma.dll">
+      <Link>lzma.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\.dependencies\windows\x86\desktop\ogg.dll">
       <Link>ogg.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\swresample-2.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\swresample-2.dll">
       <Link>swresample-2.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\swscale-4.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\swscale-4.dll">
       <Link>swscale-4.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\vorbis.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\vorbis.dll">
       <Link>vorbis.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\vorbisenc.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\vorbisenc.dll">
       <Link>vorbisenc.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\x86-windows\bin\vorbisfile.dll">
+    <Content Include="..\.dependencies\windows\x86\desktop\vorbisfile.dll">
       <Link>vorbisfile.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
